# CSE351Buckler

./: README.md
zephyr_codes/SD_read/: CMakeLists.txt  CMakePresets.json  prj.conf
zephyr_codes/SD_read/DataExtraction/: data_extract.py
zephyr_codes/SD_read/boards/: nrf5340dk_nrf5340_cpuapp.overlay
zephyr_codes/SD_read/build_1/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
zephyr_codes/SD_read/build_1/modules/azure-sdk-for-c/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/canopennode/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/chre/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/cirrus-logic/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/cjson/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/cmsis/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/cmsis-dsp/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/cmsis-nn/: cmake_install.cmake
zephyr_codes/SD_read/build_1/modules/connectedhomeip/: cmake_install.cmake
zephyr_codes/SD_read/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
zephyr_codes/SD_read/include/: SD_card.h
zephyr_codes/SD_read/src/: SD_card.c  main.c
(+240 files in other folders)
